--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
+spring.datasource.url=jdbc:postgresql://localhost/hobby-connectorDB
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=create
+googleClientId=784500132888-3e6622mupo88cvtfefnhfv4bmt5m24u6.apps.googleusercontent.com
+secretKeyJwt=wildcats
