--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 spring.datasource.url=jdbc:postgresql://localhost/hobby-connectorDB
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=nicu1998199
 
 spring.jpa.hibernate.ddl-auto=create
 
