--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,13 @@ googleClientId=784500132888-3e6622mupo88cvtfefnhfv4bmt5m24u6.apps.googleusercont
 
 secretKeyJwt=wildcats
 
+#smtp mail properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=wildcats.project98@gmail.com
+spring.mail.password=wildcats2020
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 
 
