--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,11 @@ dependencies {
 	compileJava.dependsOn 'googleJavaFormat'
 	// https://mvnrepository.com/artifact/org.springframework.security/spring-security-web
 	compile group: 'org.springframework.security', name: 'spring-security-web', version: '3.0.4.RELEASE'
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.4.1'
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.4.1'
+
 
 
 
