--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,17 @@ dependencies {
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.4.1'
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.4.1'
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
+	//compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.3.3.RELEASE'
+
+
+
+
+
+
+
+
+
 
 
 
