--- a/build.gradle
+++ b/build.gradle
@@ -41,14 +41,22 @@ dependencies {
 	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-log4j2', version: '2.3.4.RELEASE'
 	compileJava.dependsOn 'googleJavaFormat'
-	// https://mvnrepository.com/artifact/org.springframework.security/spring-security-web
-	compile group: 'org.springframework.security', name: 'spring-security-web', version: '3.0.4.RELEASE'
+
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.4.1'
+
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.4.1'
+
+
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
-	//compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.3.3.RELEASE'
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.4.1'
+
+
+
+
+
+
 
 
 
